--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,7 @@
 <h3 class="show_title"><%= @blogpost.title %></h3>
 <p class="show_read"><%= @blogpost.read + ' [' + @blogpost.bloggenre.name + ']' %></p>
 <% contents = @blogpost.content.split "\n" %>
-<div class="show_contenst">
+<div class="show_content">
   <% contents.each do |paragraph| %>
       <p><%= paragraph %></p>
   <% end %>
