Remove unnecessary chars

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -7,5 +7,5 @@
       <a href="/blogs/<%= @page_num - 1 %>">＜＜前のページ</a>
       <span> </span>
       <a href="/blogs/<%= @page_num + 1 %>">次のページ＞＞</a>
-  <% end %> %>
+  <% end %>
 </div>
